# phantom

./: .gitignore  .gitmodules  .octocov.yml  ARCHIVE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  MOCK_TESTING_PLAN.md  PLAN.md  README.ja.md  README.md  RUST_MIGRATION_PLAN.md  RUST_MIGRATION_REVIEW.md  TODO.md  TODO_REVIEW.md  TROUBLESHOOTING.md  bin.ts  biome.json  build.ts  create.go  create_test.go  go.mod  lefthook.yml  main.go  package.json  phantom.config.json  pnpm-lock.yaml  tsconfig.json
rust/: .clippy.toml  .octocov.yml  .rustfmt.toml  ARCHITECTURE.md  CLEANUP_SUMMARY.md  COMMAND_EXECUTOR_GUIDE.md  Cargo.toml  GIT_OPERATIONS_MIGRATION_GUIDE.md  MOCK_TESTING_MIGRATION.md  MOCK_TESTING_SUMMARY.md  Makefile  PROCESS_MIGRATION_PLAN.md  PROCESS_OPERATIONS_MIGRATION.md  README.md  TESTING_ABSTRACTIONS_SUMMARY.md  TESTING_GUIDE.md  TESTING_IMPROVEMENTS_COMPLETE.md  TEST_GIVE_UP.md  TEST_RATIONALE.md
rust/benches/: README.md  arena_benchmarks.rs  optimization_benchmarks.rs  phantom_benchmarks.rs  smart_pointers_benchmarks.rs
rust/docs/: error-handling-test-fixes.md  git-migration-plan.md  rust-codebase-review.md  serial-tests-investigation.md  test-fixes-summary.md  test-strategy.md
rust/examples/: batch_processor_example.rs  builder_pattern_example.rs  concurrent_operations_example.rs  custom_smart_pointers_example.rs  extension_traits_example.rs  git_with_executor.rs  handler_with_context.rs  mock_testing_example.rs  sealed_traits_example.rs  smallbox_optimization_example.rs  smart_pointers_example.rs
rust/proptest-regressions/worktree/: gitignore_proptest.txt  validate_proptest.txt
rust/scripts/: bench.sh
rust/src/: lib.rs  main.rs  test_utils.rs
rust/src/cli/: context.rs  error.rs  mod.rs  output.rs  output_example.rs
rust/src/config/: default.rs  errors.rs  loader.rs  migrate.rs  mod.rs  types.rs  validate.rs
rust/src/core/: command_executor.rs  const_utils.rs  error.rs  exit_handler.rs  extension_traits.rs  filesystem.rs  mod.rs  result.rs  sealed.rs  smart_pointers.rs  types.rs  utils.rs
rust/src/git/: backend.rs  command_backend.rs  const_utils.rs  executor.rs  factory.rs  git_executor_adapter.rs  mod.rs  parse.rs
rust/src/process/: exec.rs  executor.rs  fzf.rs  kitty.rs  mod.rs  multiplexer.rs  prompt.rs  shell.rs  spawn.rs  tmux.rs  tty.rs
rust/src/test_utils/: env_guard.rs
rust/src/worktree/: attach.rs  batch_processor.rs  builder.rs  concurrent.rs  const_validate.rs  create.rs  delete.rs  errors.rs  file_copier.rs  gitignore.rs  list.rs  (+12 more)
rust/tests/: cli_attach.rs  cli_completion.rs  cli_create.rs  cli_delete.rs  cli_exec.rs  cli_list.rs  cli_output_snapshots.rs  cli_shell.rs  cli_snapshots.rs  cli_version.rs  cli_where.rs  e2e_scenarios.rs  integration_git_operations.rs  progress_integration.rs  typescript_regression.rs
(+261 files in other folders)
