[package]
name = "phantom"
version = "0.1.0"
edition = "2021"
authors = ["shuymn <mail@shuymn.me>"]
description = "Ephemeral Git worktrees made easy - Rust implementation"
license = "MIT"
repository = "https://github.com/shuymn/phantom"
homepage = "https://github.com/shuymn/phantom"
documentation = "https://docs.rs/phantom"
keywords = ["git", "worktree", "cli", "development", "workflow"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.75.0"

[[bin]]
name = "phantom"
path = "src/main.rs"

[dependencies]
# Core
clap = { version = "4", features = ["derive", "cargo"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"

# Unix-specific
nix = "0.27"
termion = "2"
terminal_size = "0.3"

# Utilities
directories = "5"
which = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"

# Optional
git2 = { version = "0.18", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
proptest = "1"
mockall = "0.12"
tempfile = "3"

[features]
default = []
libgit2 = ["git2"]
